cyclonedx-bom-macros/tests/ui/fail/duplicated_struct.stderr
error[E0428]: the name `Foo` is defined multiple times
  --> tests/ui/fail/duplicated_struct.rs:10:5
   |
 7 |     pub struct Foo;
   |     --------------- previous definition of the type `Foo` here
...
10 |     pub struct Foo;
   |     ^^^^^^^^^^^^^^^ `Foo` redefined here
   |
   = note: `Foo` must be defined only once in the type namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0428`.
